corrected german translation to acropolis.json

--- a/src/locales/ge/acropolis.json
+++ b/src/locales/ge/acropolis.json
@@ -19,11 +19,11 @@
       "title": "Wichtige Dokumente",
       "fullSpecifications": {
         "title": "Vollständige Spezifikationen",
-        "text": "Lese die Spezifikationen zu den neu implementierten Acropolis-Funktionen."
+        "text": "Lies die Spezifikationen zu den neu implementierten Acropolis-Funktionen."
       },
       "releasePlan": {
         "title": "Freigabeplan",
-        "text": "Lese den Freigabeplan, so wie er in der Planungsphase erstellt wurde, und erfahre mehr über die Entwicklung des Projekts."
+        "text": "Lies den Freigabeplan, so wie er in der Planungsphase erstellt wurde, und erfahre mehr über die Entwicklung des Projekts."
       }
     },
     "testnetGoals": {
