corrected german translation to alexandria.json

--- a/src/locales/ge/alexandria.json
+++ b/src/locales/ge/alexandria.json
@@ -19,11 +19,11 @@
       "title": "Wichtige Dokumente",
       "releasePlan": {
         "title": "Freigabeplan",
-        "text": "Lese den Release-Plan, wie er in der Planungsphase erstellt wurde, und erfahre mehr über den Verlauf der Entwicklung."
+        "text": "Lies den Release-Plan, wie er in der Planungsphase erstellt wurde, und erfahre mehr über den Verlauf der Entwicklung."
       },
       "blogPost": {
         "title": "Ankündigungs-Blogpost",
-        "text": "Lese eine kurze Einführung in das Alexandria Testnet und seine Ziele."
+        "text": "Lies eine kurze Einführung in das Alexandria Testnet und seine Ziele."
       }
     },
     "testnetGoals": {
