corrected german translation to athens.json

--- a/src/locales/ge/athens.json
+++ b/src/locales/ge/athens.json
@@ -23,7 +23,7 @@
       },
       "releasePlan": {
         "title": "Freigabeplan",
-        "text": "Lese den Freigabeplan, wie er in der Planungsphase erstellt wurde, und erfahre mehr über den Verlauf der Entwicklung."
+        "text": "Lies den Freigabeplan, wie er in der Planungsphase erstellt wurde, und erfahre mehr über den Verlauf der Entwicklung."
       }
     },
     "testnetGoals": {
