--- a/src/locales/ge/token.json
+++ b/src/locales/ge/token.json
@@ -2,50 +2,50 @@
   "token": {
     "siteMetadata": {
       "title": "Token",
-      "description": "Teilnehmer unseres Testnetzwerks können jetzt Joystream Testnet Tokens (tJOYs) verdienen, die durch Fiat-Währung gesichert sind."    },
+      "description": "Teilnehmer unseres Testnets können jetzt Joystream Testnet Tokens (tJOYs) verdienen, die durch Fiat-Währung gesichert sind."    },
     "hero": {
       "title": "Den tJOY-Token verstehen",
-      "text": "Teilnehmer unseres Testenetzwerks können jetzt Joystream Testnet Tokens (tJOYs) verdienen, die durch Fiat-Währung gesichert sind.",
+      "text": "Teilnehmer unseres Testenets können jetzt Joystream Testnet Tokens (tJOYs) verdienen, die durch Fiat-Währung gesichert sind.",
       "tokenStats": {
         "title": "Token in Zahlen",
         "exchangeRate": "Umrechnungskurs",
         "backingValue": " Hintergrundwert",
-        "supply": " Versorgung"
+        "supply": "Versorgung"
       }
     },
     "faq": {
-      "title": "Testnetzwerk Token Information",
+      "title": "Testnet Token Information",
       "whatIsTJoy": {
         "title": "Was ist tJOY?",
-        "text": "tJOY (testJOY) ist die Währung, die in den incentivierten Testnetzwerken von Joystream verwendet wird."
+        "text": "tJOY (testJOY) ist die Währung, die in den inzentivierten Testnets von Joystream verwendet wird."
       },
       "tJoyValueOrigin": {
         "title": "Woher kommt der Wert von tJOY?",
-        "text": "Jsgenesis, das Team hinter dem Joystream-Projekt, hat das Gesamtangebot an tJOYs mit einem entsprechenden Pool an Fiat-Währung (USD) verknüpft, den das Unternehmen hält. Alle Teilnehmer des Testnetzwerks können ihre tJOYs jederzeit gegen USD eintauschen."
+        "text": "Jsgenesis, das Team hinter dem Joystream-Projekt, hat das Gesamtangebot an tJOYs mit einem entsprechenden Pool an Fiat-Währung (USD) verknüpft, den das Unternehmen hält. Alle Teilnehmer des Testnets können ihre tJOYs jederzeit gegen USD eintauschen."
       },
       "purposeOfTJoy": {
         "title": "Was ist der Zweck von tJOY?",
-        "text": "tJOY kann in unseren Testnetzwerken auf die gleiche Weise verwendet werden, wie zukünftige Nutzer der Joystream-Plattform den JOY-Token im Hauptnetz verwenden können. Die drei Hauptfunktionen von tJOY sind Staking, Governance und Payment.<0/><0/> Um beispielsweise an Testnetzwerk-Rollen teilzunehmen, müssen Nutzer tJOY einsetzen. Für die Erstellung von Vorschlägen zur Verwaltung und die Wahl von Ratsmitgliedern ist tJOY ebenfalls erforderlich. Im Testnetzwerk schließlich benötigen Kopfgelder und KPIs tJOYs für die Bezahlung effektiver Mitwirkender."
+        "text": "tJOY kann in unseren Testnets auf die gleiche Weise verwendet werden, wie zukünftige Nutzer der Joystream-Plattform den JOY-Token im Hauptnetz verwenden können. Die drei Hauptfunktionen von tJOY sind Staking, Governance und Payment.<0/><0/> Um beispielsweise an Testnet-Rollen teilzunehmen, müssen Nutzer tJOY einsetzen. Für die Erstellung von Vorschlägen zur Verwaltung und die Wahl von Ratsmitgliedern ist tJOY ebenfalls erforderlich. Im Testnet schließlich benötigen Kopfgelder und KPIs tJOYs für die Bezahlung effektiver Mitwirkender."
       },
       "whereCanTJoyBeObtained": {
-        "title": "Wo kann ich tJOY bekommen?",
+        "title": "Wo bekomme ich tJOY?",
         "text": "Es gibt viele Möglichkeiten, tJOY zu erhalten. Kleinere Beträge können in unseren Community-Kanälen (einschließlich unseres Discord-Servers und des On-Chain-Forums) angefordert werden, während größere Beträge durch die Teilnahme an Kopfgeldern, Wettbewerben und anderen Events gesammelt werden können."
       },
       "linkBetweenTJoyAndFutureToken": {
         "title": "Gibt es eine Verbindung zwischen tJOY und dem zukünftigen Hauptnetz-Token?",
-        "text": "Es gibt keine direkte Verbindung zwischen tJOY und dem Hauptnetz JOY. Wir verwenden tJOY, um die realen wirtschaftlichen Anreize zu simulieren, die im Hauptnetz vorhanden sind, um die Entwicklung der Plattform zu unterstützen und das Wachstum und die Ausbildung unserer Gemeinschaft in Vorbereitung auf den Übergang vom Testnetzwerk zum Hauptnetz zu erleichtern."
+        "text": "Es gibt keine direkte Verbindung zwischen tJOY und dem Hauptnetz JOY. Wir verwenden tJOY, um die realen wirtschaftlichen Anreize zu simulieren, die im Hauptnetz vorhanden sind, um die Entwicklung der Plattform zu unterstützen und das Wachstum und die Ausbildung unserer Gemeinschaft in Vorbereitung auf den Übergang vom Testnet zum Hauptnetz zu erleichtern."
       },
       "howToCashout": {
         "title": "Wie kann ich mir tJOY in USD auszahlen lassen?",
-        "text": "Wir verwenden Bitcoin Cash (BCH) als Zahlungsmittel in unseren Testnetzwerken. Sie können sich tJOY auszahlen lassen, indem Sie eine Überweisung an die spezielle Burn-Adresse vornehmen: <0>5D5PhZQNJzcJXVBxwJxZcsutjKPqUPydrvpu6HeiBfMaeKQu</0> Bevor Sie dies tun, sollten Sie das <0>Memo</0> des Schlüssels, von dem aus die Überweisung getätigt wird, auf Ihre BCH-Adresse setzen. Zum Zeitpunkt der Überweisung wird der Wechselkurs von BCH zu USD festgelegt. <1/><1/>Weitere Informationen zu Auszahlungen finden Sie <2>hier</2>."
+        "text": "Wir verwenden Bitcoin Cash (BCH) als Zahlungsmittel in unseren Testnets. Du kannst dir tJOY auszahlen lassen, indem du eine Überweisung an die spezielle Burn-Adresse vornimmst: <0>5D5PhZQNJzcJXVBxwJxZcsutjKPqUPydrvpu6HeiBfMaeKQu</0> Bevor du dies tust, solltest du das <0>Memo</0> des Schlüssels, von dem aus die Überweisung getätigt wird, auf deine BCH-Adresse setzen. Zum Zeitpunkt der Überweisung wird der Wechselkurs von BCH zu USD festgelegt. <1/><1/>Weitere Informationen zu Auszahlungen findest du <2>hier</2>."
       },
       "howToEarn": {
         "title": "Wie kann ich im Hauptnetz JOY verdienen?",
         "text": "Derzeit ist die einzige Möglichkeit, sich eine Zuteilung von Hauptnetz-JOY zu sichern, durch hochwertige Beiträge zur Plattform und zur Community über unser <0>Gründungsmitgliederprogramm</0>."
       },
       "TJoyWorth": {
-        "title": "How much is tJOY worth?",
-        "text": "Sie können den aktuellen Wechselkurs (tJOY->USD) auf dieser Seite überprüfen (siehe oben)."
+        "title": "Was ist tJOY wert?",
+        "text": "Du kannst den aktuellen Wechselkurs (tJOY->USD) auf dieser Seite überprüfen (siehe oben)."
       }
     },
     "Auszahlungen": {
