corrected german translation to acropolis.json

--- a/src/locales/ge/acropolis.json
+++ b/src/locales/ge/acropolis.json
@@ -5,7 +5,7 @@
     },
     "hero": {
       "title": "Acropolis Network",
-      "text": "Schau dir die verfügbaren Rollen an und wähle die, die am besten zu dir passt. Beeinflusse die Entwicklung der Plattform und verdiene dabei echtes Geld.",
+      "text": "Entdecke die verfügbaren Rollen und wähle die, die am besten zu dir passt. Beeinflusse die Entwicklung der Plattform und verdiene dabei echtes Geld.",
       "chipText": "Was ist das?"
     },
     "heroCard": {
