corrected german translation to manifesto.json

--- a/src/locales/ge/manifesto.json
+++ b/src/locales/ge/manifesto.json
@@ -1,7 +1,7 @@
 {
   "manifesto": {
     "siteMetadata": {
-      "description": "Lese das Joystream-Manifest"
+      "description": "Lies das Joystream-Manifest"
     },
     "hero": {
       "title": "Das Joystream-Manifest",
