--- a/src/locales/ge/constantinople.json
+++ b/src/locales/ge/constantinople.json
@@ -1,11 +1,11 @@
 {
   "Konstantinopel": {
     "siteMetadata": {
-      "description": "Erkunden Sie das Constantinople testnet"
+      "description": "Erkunden Sie das Constantinople Testnet"
     },
     "hero": {
-      "title": "Konstantinopel Network",
-      "text": "Das Testnetzwerk Konstantinopel führt ein verbessertes Vorschlagssystem und ein Fiat-gestütztes Token-Modell zur Entschädigung der Teilnehmer ein.",
+      "title": "Constantinople Network",
+      "text": "Das Constantinople Testnet führt ein verbessertes Vorschlagssystem und ein Fiat-gestütztes Token-Modell zur Entschädigung der Teilnehmer ein.",
       "chipText": "Was ist das?"
     },
     "heroCard": {
@@ -16,35 +16,36 @@
       "text": "Die Konstantinssäule, auch bekannt als der Verbrannte Stein oder die Verbrannte Säule, ist eine römische Monumentalsäule, die auf Befehl des römischen Kaisers Konstantin des Großen im Jahr 330 n. Chr. errichtet wurde. Sie erinnert an die Erklärung von Byzanz zur neuen Hauptstadt des Römischen Reiches."
     },
     "criticalDocuments": {
-      "title": "Kritische Dokumente",
+      "title": "Wichtige Dokumente",
       "releasePlan": {
         "title": "Freigabeplan",
-        "text": "Lesen Sie den Freigabeplan, wie er in der Planungsphase erstellt wurde, und erfahren Sie mehr über den Verlauf der Entwicklung."
+        "text": "Lies den Freigabeplan, wie er in der Planungsphase erstellt wurde, und erfahre mehr über den Verlauf der Entwicklung."
       },
       "blogPost": {
-        "title": "Ankündigung Blog Post",
-        "text": "Lesen Sie eine kurze Einführung in das  Konstantinopel-Testnetzwerk und seine Ziele."
+        "title": "Ankündigungs-Blogpost",
+        "text": "Lies eine kurze Einführung in das Constantinople-Testnet und seine Ziele."
       }
     },
     "testnetGoals": {
       "title": "Ziele des Testnets",
-      "subtitle": "Die unten aufgeführten Ziele sind eine vereinfachte Darstellung unserer Hauptziele für das Konstantinopel-Testnetzwerk.",
+      "subtitle": "Die unten aufgeführten Ziele sind eine vereinfachte Darstellung unserer Hauptziele für das Constantinople Testnets.",
       "goals": {
         "proposalSystem": {
           "title": "Ein neues Vorschlagssystem einführen",
-          "text": "Das  Konstantinopel-Testnetzwerk ist um die Einführung eines Vorschlagssystems herum aufgebaut, das die Governance-Struktur der Plattform stärkt und die tägliche Verantwortung für die Überwachung des Netzwerks und die Zuweisung von Ressourcen auf die Wähler und den Rat verlagert."
+          "text": "Das Constantinople Testnet ist um die Einführung eines Vorschlagssystems herum aufgebaut, das die Governance-Struktur der Plattform stärkt und die tägliche Verantwortung für die Überwachung des Netzwerks und die Zuweisung von Ressourcen auf die Wähler und den Rat verlagert."
         },
         "tokenModel": {
-          "title": "Ein Fiat-gestütztes Tokenmodell einführen",          "text": "Konstantinopel führt eine neue Anreizstruktur ein, bei der die Testnetzwerk-Tokens durch einen Fiat-Pool (USD) gedeckt sind, wodurch ein realistischeres Wirtschaftssystem für die Plattform geschaffen wird."
+          "title": "Ein Fiat-gestütztes Tokenmodell einführen",          
+          "text": "Constantinople führt eine neue Anreizstruktur ein, bei der die Testnet-Tokens durch einen Fiat-Pool (USD) gedeckt sind, wodurch ein realistischeres Wirtschaftssystem für die Plattform geschaffen wird."
         }
       }
     },
     "roles": {
-      "title": "Incentivierte Rollen für das Konstantinopel-Netzwerk"
+      "title": "Inzentivierte Rollen für das Constantinople Network"
     },
     "map": {
       "title": "Konstantinopel",
-      "text": "<0>Konstantinopel war die Hauptstadt des Oströmischen Reiches im vierten Jahrhundert.</0> Sie war berühmt für ihre massiven und komplexen Verteidigungsanlagen sowie ihre architektonischen Meisterwerke und opulenten Adelspaläste. Wie die Stadt, so hoffen wir, dass unser Testnetzwerk Konstantinopel ein würdiger Nachfolger von Rom sein wird.<1/><1/><2><0/> Lesen Sie den Blogbeitrag</2>"
+      "text": "<0>Konstantinopel war die Hauptstadt des Oströmischen Reiches im vierten Jahrhundert.</0> Sie war berühmt für ihre massiven und komplexen Verteidigungsanlagen sowie ihre architektonischen Meisterwerke und opulenten Adelspaläste. Wie die Stadt, so hoffen wir, dass unser Constantinople Testnet ein würdiger Nachfolger von Rom sein wird.<1/><1/><2><0/> Lies den Blogbeitrag</2>"
     }
   }
 }
